# TransitReader

./: .gitignore  CLAUDE.md  OPTIMIZATION_REVIEW.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
src/transit_reader/: crev-project.txt  main.py
src/transit_reader/config/: biographical_questions.yaml  llm_config.yaml
src/transit_reader/crews/: crev-project.txt
src/transit_reader/crews/chart_appendices_crew/: chart_appendices_crew.py
src/transit_reader/crews/chart_appendices_crew/config/: agents.yaml  tasks.yaml
src/transit_reader/crews/gmail_crew/: gmail_crew.py
src/transit_reader/crews/natal_analysis_crew/: natal_analysis_crew.py
src/transit_reader/crews/natal_analysis_review_crew/: natal_analysis_review_crew.py
src/transit_reader/crews/report_writing_crew/: report_writing_crew.py
src/transit_reader/crews/review_crew/: review_crew.py
src/transit_reader/crews/transit_analysis_crew/: transit_analysis_crew.py
src/transit_reader/crews/transit_analysis_review_crew/: transit_analysis_review_crew.py
src/transit_reader/crews/transit_to_natal_analysis_crew/: transit_to_natal_analysis_crew.py
src/transit_reader/crews/transit_to_natal_review_crew/: transit_to_natal_review_crew.py
src/transit_reader/tools/: gemini_search_tool.py  gmail_tool_with_attachment.py  google_search_tool.py  linkup_search_tool.py  qdrant_search_tool.py
src/transit_reader/utils/: astro_styling.css  biographical_questionnaire.py  chart_formatting.py  constants.py  convert_to_pdf.py  embeddings_fn.py  gmail_utility_with_attachment.py  immanuel_natal_chart.py  immanuel_natal_to_transit_chart.py  immanuel_transit_chart.py  kerykeion_chart_utils.py  llm_manager.py  models.py  qdrant_setup.py  screenshot_util.py  styling.css  subject_selection.py  transit_selection.py
(+18 files in other folders)
