[project]
name = "transit_reader"
version = "0.2.0"
description = "transit_reader using crewAI"
authors = [{ name = "Benjamin Jasper", email = "ben.j.jasper@gmail.com" }]
requires-python = ">=3.12.9,<3.13"
dependencies = [
    "crewai[tools]>=1.3.0",
    "html2text",
    "python-dotenv>=1.2.1",
    "trafilatura>=2.0.0",
    "google-auth-oauthlib>=1.2.3",
    "google-genai>=1.47.0",
    "botocore>=1.40.64",
    "markdown>=3.9",
    "immanuel>=1.5.2",
    "kerykeion==5.1.7",
    "weasyprint>=66.0",
    "boto3>=1.37.36",
    "md2pdf>=1.0.1",
    "selenium>=4.38.0",
    "ipykernel>=7.1.0",
    "googlemaps>=4.10.0",
    "linkup-sdk>=0.8.0",
]

[project.scripts]
kickoff = "transit_reader.main:kickoff"
plot = "transit_reader.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
